updates int in lsb comparison

--- a/install_files/ansible-base/roles/validate/tasks/validate_tails_environment.yml
+++ b/install_files/ansible-base/roles/validate/tasks/validate_tails_environment.yml
@@ -9,7 +9,7 @@
   assert:
     that:
       - ansible_lsb.id == "Tails" or tails_os_string.matched
-      - ansible_lsb.major_release >= 9
+      - ansible_lsb.major_release|int >= 9
     msg: >-
       SecureDrop requires Tails 3 or greater for workstation environments.
 
