--- a/install_files/ansible-base/roles/tails-config/tasks/configure_network_hook.yml
+++ b/install_files/ansible-base/roles/tails-config/tasks/configure_network_hook.yml
@@ -22,4 +22,4 @@
 - name: Run SecureDrop network hook
   # Writes files to /etc, so elevated privileges are required.
   become: yes
-  command: /usr/bin/python "{{ tails_config_securedrop_dotfiles }}/securedrop_init.py"
+  command: python "{{ tails_config_securedrop_dotfiles }}/securedrop_init.py"
